<resources>
    <string name="app_name">Epigram</string>
    <string name="app_name_title">epigram</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_c">COVID-19</string>
    <string name="tab_text_r">FOR YOU</string>
    <string name="tab_text_2">NEWS</string>
    <string name="tab_text_3">THE CROFT</string>
    <string name="tab_text_4">FEATURES</string>
    <string name="tab_text_5">OPINION</string>
    <!--<string name="tab_text_4">COMMENT</string>-->
    <!--<string name="tab_text_5">SCIENCE</string>-->
    <!--<string name="tab_text_6">WELLBEING</string>-->
    <!--<string name="tab_text_7">LIFESTYLE</string>-->
    <string name="tab_text_6">CULTURE</string>
    <string name="tab_text_7">SPORT</string>
    <!--<string name="tab_text_10">INTRAMURAL</string>-->

    <string name="empty"></string>
    <string name="tag1">news</string>
    <string name="tagc">covid-19</string>
    <string name="tag2">the-croft</string>
    <string name="tag3">features</string>
    <string name="tag4">comment</string>
    <!--<string name="tag3">comment</string>
    <string name="tag4">science</string>
    <string name="tag5">wellbeing</string>
    <string name="tag6">lifestyle</string>-->
    <string name="tag5">entertainment</string>
    <string name="tag6">sport</string>
    <!--<string name="tag9">intramural</string>-->


    <string name="tab_1">RECENT NEWS</string>
    <string name="tab_2">NEWS SECTION</string>
    <string name="tab_3">FEATURES SECTION</string>
    <string name="tab_4">COMMENT SECTION</string>

    <string name="menu_most_read">MOST READ</string>
    <string name="menu_news">NEWS</string>
    <string name="menu_covid_19">COVID-19</string>
    <string name="menu_features">FEATURES</string>
    <string name="menu_comment">COMMENT</string>
    <string name="menu_the_croft">THE CROFT</string>
    <string name="menu_wellbeing">WELLBEING</string>
    <string name="menu_food">FOOD</string>
    <string name="menu_travel">TRAVEL</string>
    <string name="menu_style">STYLE</string>
    <string name="menu_opinion">OPINION</string>
    <string name="menu_science">SCIENCE</string>
    <string name="menu_lifestyle">LIFESTYLE</string>
    <string name="menu_entertainment">CULTURE</string>
    <string name="menu_film_tv">FILM &amp; TV</string>
    <string name="menu_arts">ARTS</string>
    <string name="menu_music">MUSIC</string>
    <string name="menu_sport">SPORT</string>
    <string name="menu_intramural">INTRAMURAL</string>
    <string name="menu_puzzles">PUZZLES</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_about">ABOUT</string>
    <string name="menu_promo">PROMO CODE</string>
    <string name="menu_home">HOME</string>
    <string name="menu_saved">SAVED ARTICLES</string>
    <string name="menu_liked">LIKED ARTICLES</string>
    <string name="menu_for_you">FOR YOU</string>

    <string name="menu_most_read_tag">weeklytop</string>
    <string name="menu_news_tag">news</string>
    <string name="menu_covid_19_tag">covid-19</string>
    <string name="menu_features_tag">features</string>
    <string name="menu_comment_tag">comment</string>
    <string name="menu_the_croft_tag">the-croft</string>
    <string name="menu_wellbeing_tag">wellbeing</string>
    <string name="menu_food_tag">food</string>
    <string name="menu_travel_tag">travel</string>
    <string name="menu_style_tag">style</string>
    <string name="menu_opinion_tag">opinion</string>
    <string name="menu_science_tag">science</string>
    <string name="menu_lifestyle_tag">lifestyle</string>
    <string name="menu_entertainment_tag">entertainment</string>
    <string name="menu_film_tv_tag">film-tv</string>
    <string name="menu_arts_tag">arts</string>
    <string name="menu_music_tag">music</string>
    <string name="menu_sport_tag">sport</string>
    <string name="menu_intramural_tag">intramural</string>
    <string name="menu_puzzles_tag">puzzles</string>
    <string name="menu_settings_tag">settings</string>
    <string name="menu_about_tag">about</string>
    <string name="menu_home_tag">home</string>
    <string name="menu_saved_tag">saved</string>
    <string name="menu_liked_tag">liked</string>
    <string name="menu_for_you_tag">for-you</string>

    <string name="app_about">EPIGRAM\nVERSION: %s</string>
    <string name="app_about_general">In print and online, Epigram is the University of Bristol\’s independent student newspaper. We are run for students, by students, and have a combined readership of over 20,000. Our content is not controlled by the University or the Students Union and we remain politically neutral.\n\nWe welcome written pieces, videos, photography, art and poetry and our sections cover a wide variety of topics. Our lifestyle magazine, The Croft can be found inside every copy of Epigram and online featuring Wellbeing, Style, Food and Travel.\n\nEpigram is printed fortnightly and can be found around campus, in cafes and student accommodation. We have a large editorial and business team who work hard, alongside their degrees, to create Epigram for both print and online.
    </string>
    <string name="app_about_history">Epigram was founded in 1988 by James Landale, now Diplomatic Correspondent for BBC News. Former Editor of The Daily Telegraph, William Lewis was a writer for the newspaper in these early years.\n\nBefore Epigram, there had been The Bristol Nonesuch which was launched in 1911 and continued until the 1960s. The name is now used for the University\’s alumni magazine. BACCUS followed Nonesuch, but was denounced as NUS propaganda and funding was withdrawn by the Student\’s Union in the late 1980s.\n\nNotable Epigram alumni include Susanna Reid who was Editor-in-Chief between 1990 and 1991 and Krissi Murison, once Music Editor, who is now the Deputy Editor of The Sunday Times Magazine.\n\nAs of May 2019, the newspaper has reached 339 print editions and we continue to grow our online presence including on Facebook, Twitter and Instagram.
    </string>
    <string name="app_about_redactions">As an independent publication, Epigram strives to be as accurate and impartial as possible. However, should you wish to raise any editorial, commercial or legal concerns, provide feedback or make a formal complaint, please get in touch:\n\nEditorial and Legal: editor.epigram@gmail.com\nCommercial: managingdirector.epigram@gmail.com\n\nPlease include the issue number, page number and article headline or advertisement that your complaint refers to. We endeavour to correct any inaccuracies as soon as they are raised.\n\nIn the first instance, we will investigate your complaint and seek an informal resolution where suitable. If the complainant is not satisfied with the response, we will involve Bristol Student\’s Union – of which we are an affiliated media product, but remain editorially independent - who can provide mediation for the issue and seek a resolution.
    </string>
    <string name="welcome_text">As a thank you for installing our app we would like to offer you a 25% discount at The Burger Joint for a limited time only.</string>
    <string name="welcome_left">{0,choice,0#Remember to claim your discount|1#This screen will show {0} more time|1&lt;This screen will show {0} more times}</string>
    <string name="welcome_text_2">Show this screen to your waiter when you pay to receive 25% off your food bill. This screen can also be found in the navigation drawer of the main app.</string>
    <string name="welcome_text_3">Show this screen to your waiter when you pay to receive 25% off your food bill.</string>
    <string name="welcome_terms">Terms and conditions apply. Valid from Sunday to Wednesday until 15 March. Cannot be used in conjunction with any other offer.</string>
    <string name="build">%s [%s] %s</string>
    <string name="copyright_text">Copyright © 2021 epigram</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_device">Follow device theme</string>
    <string name="theme_description">Epigram can be read with a light or dark background, this can be easier on your eyes at night.</string>

    <string name="default_layout">Default</string>
    <string name="compact_layout">Compact</string>
    <string name="layout_description">The layout determines how articles will appear when reading epigram.</string>

    <string name="default_personalisation">Default</string>
    <string name="advanced_personalisation">Advanced personalisation (beta)</string>
    <string name="for_you_description">Based off your liked articles, select if you want generic suggestions or more personalised reads.</string>

    <string name="latest_corona">LATEST: COVID-19</string>
    <string name="corona_warn">Remember to keep up to date with the latest news regarding COVID-19 and how the University of Bristol may be affected. For more information please visit\n\nwww.gov.uk/coronavirus\nwww.nhs.uk/conditions/coronavirus-covid-19\nwww.bristol.ac.uk/students/coronavirus</string>

    <string name="author">by %s</string>

</resources>
