<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.WelcomeActivity">
        <LinearLayout
                android:layout_width="match_parent" android:layout_height="60dp"
        android:elevation="10dp">
            <ImageView android:layout_width="48dp" android:layout_height="48dp"
                       android:id="@+id/welcome_close"
                       android:layout_gravity="center"
                       style="@style/SelectableItemBackground"
            android:src="@drawable/ic_close_red_24dp"
            android:padding="12dp"/>
        </LinearLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:elevation="0dp"
                                            android:paddingBottom="@dimen/medium_padding">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:padding="@dimen/element_padding"
                      android:orientation="vertical"
                      android:gravity="center">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:paddingTop="75dp"
                          android:layout_gravity="center_horizontal">
                <ImageView
                        android:src="@drawable/layer_2"
                        android:layout_width="@android:dimen/app_icon_size"
                        android:layout_height="@android:dimen/app_icon_size"
                        android:layout_gravity="bottom"
                        android:alpha="1"/>

                <TextView
                        android:id="@+id/welcome_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/tiny_padding"
                        android:text="@string/app_name_title"
                        android:textSize="38dp"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:paddingBottom="@dimen/large_padding">
                <TextView
                        android:text="Thank you for installing Epigram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textStyle="bold"
                        android:visibility="visible"
                        android:textSize="20dp"/>
            </LinearLayout>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:fontFamily="sans-serif-condensed-light"
                        android:textSize="16dp"
                      android:text="@string/welcome_text"/>
            <TextView
                android:text="epigramburgerjoint20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_padding"
                android:layout_marginBottom="@dimen/element_padding"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="@dimen/small_padding"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:visibility="visible"
                android:textSize="40dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="16dp"
                android:text="@string/welcome_text_2"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/cropped_icon"/>

            <TextView
                android:id="@+id/welcome_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="@string/welcome_terms"
                android:padding="@dimen/small_padding"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:textAlignment="center"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            tools:text="This screen will appear 3 more times"
            android:padding="@dimen/small_padding"
            android:textAlignment="center"/>
    </LinearLayout>
</FrameLayout>