<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">
        <LinearLayout
                android:layout_width="match_parent" android:layout_height="60dp"
        android:elevation="10dp">
            <ImageView android:layout_width="48dp" android:layout_height="48dp"
                       android:id="@+id/about_close"
                       android:layout_gravity="center"
                       style="@style/SelectableItemBackground"
            android:src="@drawable/ic_close_red_24dp"
            android:padding="12dp"/>
        </LinearLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:elevation="0dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:padding="@dimen/element_padding"
                      android:orientation="vertical">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:paddingTop="100dp"
                          android:layout_gravity="center_horizontal">
                <ImageView
                        android:src="@drawable/layer_2"
                        android:layout_width="@android:dimen/app_icon_size"
                        android:layout_height="@android:dimen/app_icon_size"
                        android:layout_gravity="bottom"
                        android:alpha="1"/>

                <TextView
                        android:id="@+id/about_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/tiny_padding"
                        android:text="@string/app_name_title"
                        android:textSize="38dp"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            </LinearLayout>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingTop="@dimen/element_padding"
                      android:layout_gravity="center_horizontal"
                      android:textStyle="bold"
                      android:fontFamily="sans-serif-condensed-medium"
                      android:textColor="@color/black"
                      android:textSize="16dp"
                      android:text="@string/app_about"
                      android:textAlignment="center"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="50dp"
                    android:paddingBottom="@dimen/inner_element_padding">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tab_background"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:layout_marginStart="2dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:text="The history of Epigram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textStyle="bold"
                        android:visibility="visible"
                        android:textSize="20dp"/>
            </LinearLayout>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:fontFamily="sans-serif-condensed"
                      android:text="@string/app_about_about_us"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="50dp"
                    android:paddingBottom="@dimen/inner_element_padding">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tab_background"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:layout_marginStart="2dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:text="Clarifications, Corrections and Retractions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textStyle="bold"
                        android:visibility="visible"
                        android:textSize="20dp"/>
            </LinearLayout>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:fontFamily="sans-serif-condensed"
                      android:text="@string/app_about_redactions"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:paddingTop="@dimen/large_padding"
                    android:text="Copyright © 2018 epigram"
                    android:textSize="10dp"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>